spectral glazing materials based on CGDB data and models.

Fixed bug that caused inf and nan errors with -cw setting
where longer wavelength was substantially less than limits
of specified spectra.

Created bsdfpeaks utility to identify and report full-width,
half-maximum sizes of peaks in SIR and XML inputs.

Changed default super-sampling in bsdf2ttree from 256 to 64,
since there doesn't seem to be much benefit to the higher
sampling rate for most BSDFs.

Fixed problem with "mirror" primitive, which was not permitting
indirect rays to transmit through alternate material type.
Thanks to Jon Sargent for finding problem and help resolving it.

Added experimental C++ based rxpiece tool to default installation
in makeall/Rmakefile.

Added rcomb -mt option to transpose concatenation matrix.

====================
Version 6.1 (Released July 24, 2025)

Fixed array limit bug in EPW file loader.

Fixed bug in rcomb, rmtxop -c and -C option not accepting file paths
starting with '.'

Fixed ordering of spectral data in gensdaymtx output.

Fixed crash in new Poisson sampling routines for large settings of -ad.

Fixed reversal of direct and diffuse values in EPW files.  (Thanks to
Taoning Wang for spotting the error.)

Fixed issue with zero radiation values in gensdaymtx (TW).

(The above fixes were released as official patch 6.0.1)

Fixed issues with rtpict running under Windows.  Thanks to Mehlika
Inanici for help finding problems and testing.

Added metadata i/o to ra_bmp in both directions, preserving
color space, gamma, and typical Radiance header settings.

Updated evalglare with new 3.0x version from Jan Wienold.

Fixed issue with genBSDF -t3 option under Windows.

Created rxfluxmtx tool that avoids unnecessary interprocess
communication by supporting direct calls to RcontribSimulManager
class and provides view rendering as well as surface sampling
and pass-through modes.

Added -m option to pvsum to optimize memory cache performance.